[package]
name = "vulkan-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
vulkan-core = { path="../vulkan-core" }
vulkan-server = { path = "../vulkan-server" }
redis = { version = "1", features = ["tokio-comp", "connection-manager", "r2d2"] }
r2d2 = "0.8"
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
lazy_static = "1.4"